# SysMon

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  sysmon
.github/workflows/: ci.yml  ci.ymlM-A
include/: CPUUtils.h  ResourceMonitor.h  cpu.h  cpu_detail.h  display.h  network_monitor.h  process.h  sysinfo.h  systemMonitor.h  ui.h
src/: ResourceMonitor.cpp  cpu.cpp  cpu_detail.cpp  display.cpp  main.cpp  network_monitor.cpp  process.cpp  sysinfo.cpp  systemMonitor.cpp  ui.cpp
tests/: test_all.cpp
